Fixed Height issue & button on mobile

--- a/inet.css
+++ b/inet.css
@@ -47,13 +47,13 @@
     display:inline-block;
     background-color:#005DAA;
     font-size:20px;
-    padding:5%;
     margin:0 0 2% 0;
     font-weight:bold;
     color:white;
     text-decoration:none;
     border-radius:10px;
     text-align:center;
+    padding:10%;
 }
 #button1:hover {
     background-color: #6096BF;
@@ -106,7 +106,7 @@ h2 {
     margin: 5% 0 5% 0;
     background-image: url(dark-pattern.jpg);
     background-color: gray;
-    padding: 5% 3% 5% 3%;
+    padding: 3% 3% 5% 3%;
     clear: both;
 }
 #container-2 ul{
